# coffee-beans

./: Procfile  README.md  package-lock.json  package.json
Frontend/: Procfile  package-lock.json  package.json
Frontend/public/: index.html
Frontend/src/: Theme.js  index.css  index.js
Frontend/src/Home/: index.js
Frontend/src/Home/components/: BakeCard.js  Footer.js  Header.js  NutritionFacts.js  ReferralLink.js
Frontend/src/components/: PriceInput.jsx
Frontend/src/contracts/: bean.ts  constants.ts  idl.ts  keys.ts
SmartContract/: Anchor.toml  package.json
SmartContract/programs/baked-beans/: Cargo.toml
SmartContract/programs/baked-beans/src/: constants.rs  error.rs  lib.rs  utils.rs
SmartContract/programs/baked-beans/src/instructions/: buy_eggs.rs  hatch_eggs.rs  initialize.rs  mod.rs  sell_eggs.rs
SmartContract/programs/baked-beans/src/states/: global_state.rs  user_state.rs
SmartContract/programs/roog-contract/: Cargo.toml
SmartContract/programs/roog-contract/src/: constants.rs  errors.rs  lib.rs  utils.rs
SmartContract/programs/roog-contract/src/instructions/: buy_roogs.rs  hatch_roogs.rs  initialize.rs  mod.rs  sell_roogs.rs
SmartContract/programs/roog-contract/src/states/: global_state.rs  mod.rs  user_state.rs
SmartContract/tests/: baked-beans.ts  mint.json  roog-contract.ts
